--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Calculator</title>
   </head>
   <body>
+    <h1>My Calculator</h1>
     <div class="container">
       <div class="calculator">
         <input type="text" id="inputBox" placeholder="0" />
